--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h2>Hover Over Me 👇😋 ,To Know More !!</h2>
+  <h2>Hover Over Me 👇,To Know More !! 😋</h2>
   <div class="container">
     <div class="image-section">
       <img src="apar.jpg" alt="">
